<resources>
    <string name="app_name">InnoCv</string>
    <string name="example_user">Example</string>
    <string name="create">CREATE</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="update">UPDATE</string>
    <string name="search">search</string>
    <string name="user_id">user id</string>
    <string name="id">Id:</string>
    <string name="name">Name:</string>
    <string name="birthdate">Birthdate:</string>
    <string name="error">Error</string>
    <string name="add">User added</string>
    <string name="sucess_add">User succesfully added</string>
    <string name="user_update">User updated</string>
    <string name="sucess_update">User succesfully updated</string>
    <string name="user_delete">User deleted</string>
    <string name="sucess_delete">User succesfully deleted</string>
    <string name="error_network">Network Error try again later</string>
    <string name="no_data">There are not data for this id</string>
    <string name="fill_data">You must fill in all fields</string>
    <string name="searching">Searching Users</string>
    <string name="loading">Loading Users</string>
    <string name="creating">Creating Users</string>

</resources>
