<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="300"
        android:title="@string/edit"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="200"
        android:title="@string/delete"

        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        app:actionViewClass="android.widget.SearchView"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="collapseActionView|ifRoom" />
</menu>