<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lyUserDataPannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <EditText
            android:id="@+id/edit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_id_card"
            android:drawablePadding="16dp"
            android:hint="@string/user_id"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:visibility="visible" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="128dp"
            android:layout_height="51dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/search"
            android:textColor="#ffff"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyUserPannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:visibility="gone">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_user" />

        <TextView
            android:id="@+id/tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="User info"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/id"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/id_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableLeft="@drawable/ic_id"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableLeft="@drawable/ic_user_name"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/birthdate"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/birth_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:drawableLeft="@drawable/ic_calendar2"
            android:drawablePadding="16dp"
            android:gravity="center_vertical"
            android:textSize="16sp" />


    </LinearLayout>
</LinearLayout>