<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.eladiofreire.innocvproject.ui.fragment.addUser.AddFragment">


    <LinearLayout
        android:id="@+id/lyUserDataPannel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_user"
            android:drawablePadding="16dp"
            android:hint="@string/example_user"
            android:singleLine="true" />

        <EditText
            android:id="@+id/edit_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:drawableLeft="@drawable/ic_calendar"
            android:drawablePadding="16dp"
            android:focusable="false"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/buttonCreate"

                android:layout_width="128dp"
                android:layout_height="51dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:background="@color/colorPrimaryDark"
                android:textColor="#ffff"
                android:text="@string/create" />

            <Button
                android:id="@+id/buttonDelete"

                android:layout_width="128dp"
                android:layout_height="51dp"
                android:layout_gravity="center_horizontal"
                android:background="#ffff"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/delete"
                android:visibility="gone" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>